Updte: cambios a personal_cre.suministrador.html

--- a/src/views/actualizar_infraestructura.html
+++ b/src/views/actualizar_infraestructura.html
@@ -267,7 +267,7 @@
         </section>
 
         <section class="formulario__separadoresTitulo">
-          <p>2. Datos del Servicio de Suminsitro Eléctrico. *</p>
+          <p>2. Datos del Servicio de Suministro Eléctrico. *</p>
           <img
             src="../../public/images/more_black.svg"
             alt=""
