--- a/src/views/personal_cre.html
+++ b/src/views/personal_cre.html
@@ -36,7 +36,7 @@
         aria-label="Third navbar example"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="./personal_cre.html">
             <img
               src="../../public/images/logo_electrocre.png"
               alt=""
@@ -65,7 +65,7 @@
                 <a class="nav-link" href="./personal_cre_propietarios.html">Propietarios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Suministradores</a>
+                <a class="nav-link" href="./personal_cre_suministradores.html">Suministradores</a>
               </li>
               <li class="nav-item dropdown">
                 <a
