--- a/src/views/personal_cre_suministradores.html
+++ b/src/views/personal_cre_suministradores.html
@@ -107,7 +107,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5 custom-title" id="exampleModalLabel">
-              Borrar Propietario
+              Borrar Suministrador
             </h1>
             <button
               type="button"
@@ -117,7 +117,7 @@
             ></button>
           </div>
           <div class="modal-body">
-            ¿Quieres borrar permanentemente el Propietario?
+            ¿Quieres borrar permanentemente el Suministrador?
           </div>
           <div class="modal-footer">
             <button
@@ -153,7 +153,7 @@
             >Registrar Nuevo Propietario</a
           >
         </section> -->
-        <section class="tabla__titulos">Propietarios</section>
+        <section class="tabla__titulos">Suministradores</section>
         <section class="tabla__grid">
           <table>
             <thead>
@@ -345,7 +345,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../js/dashboard_propietario.js"></script> 
+    <script src="../js/dashboard_suministrador.js"></script> 
     <script src="../js/tabla.js"></script>
   </body>
 </html>
