--- a/src/css/consulta_desktop.css
+++ b/src/css/consulta_desktop.css
@@ -281,4 +281,12 @@ main {
       }
     }
   }
+
+  .grafico{
+    width: 70vw;
+    height: 40rem;
+    max-width: 120rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
