--- a/src/css/personal_cre_mobile.css
+++ b/src/css/personal_cre_mobile.css
@@ -65,6 +65,7 @@ main {
     align-content: center;
     .grafico__lineal {
       width: 100%;
+      height: 25rem;
     }
     .grafico__dona {
       width: 100%;
