--- a/src/css/personal_cre_propietarios_mobile.css
+++ b/src/css/personal_cre_propietarios_mobile.css
@@ -1,29 +1,21 @@
 @import url("./root.css");
 header {
-  background-color: var(--color-gris-background);
+  width: 100vw;
+  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
   nav {
-    width: 80vw;
-    margin-left: auto;
-    margin-right: auto;
-    height: 5rem;
-    font-size: 1.8rem;
-    font-weight: 500;
-    font-family: var(--font-montserrat);
+    font-size: 1.6rem;
     .navbar-brand {
       display: flex;
       align-items: center;
       font-size: 1.8rem;
-      margin-right: 4rem;
-      font-weight: 600;
       img {
-        width: 4rem;
+        width: 3rem;
         margin-right: 1rem;
       }
     }
 
     .dropdown-menu {
-      text-align: center;
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       font-weight: 500;
     }
   }
@@ -60,29 +52,32 @@ header {
 main {
   /* background-color: var(--color-gris-background); */
   width: 100vw;
-  height: 200rem;
   .grafico {
     display: flex;
-    width: 80vw;
+    flex-direction: column;
+    width: 90vw;
     justify-content: center;
-    margin-top: 4rem;
+    margin-top: 1rem;
     margin-left: auto;
     margin-right: auto;
     align-items: center;
     align-content: center;
     .grafico__lineal {
-      width: 70%;
+      width: 100%;
+      height: 25rem;
     }
     .grafico__dona {
-      width: 30%;
+      width: 100%;
     }
   }
   .tabla {
-    width: 80vw;
+    width: 90vw;
+    overflow-x: auto;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2rem;
     border: 0.2rem solid var(--color-gris-opaco);
+    
 
     .tabla__titulos {
       font-size: 1.8rem;
@@ -134,15 +129,17 @@ main {
       }
     }
     .tabla__grid {
+        /* border: 0.2rem solid var(--color-gris-opaco); */
+        
       table {
-        display: block;
+        /* display: block; */
         thead {
-          display: block;
+          /* display: block; */
           font-size: 1.8rem;
           font-weight: 700;
         }
         tbody {
-          display: block;
+          /* display: block; */
           font-size: 1.3rem;
           font-weight: 500;
           tr:hover {
@@ -161,31 +158,28 @@ main {
           }
 
           .tabla__grid--ID {
-            width: 5%;
+            width: 5rem;
             align-content: center;
           }
-          .tabla__grid--persona {
-            width: 5%;
+          .tabla__grid--nombre {
+            width: 20rem;
             align-content: center;
           }
-          .tabla__grid--marca {
-            width: 10%;
+          .tabla__grid--telefono {
+            width: 10rem;
             align-content: center;
           }
-          .tabla__grid--razonNombre {
-            width: 20%;
-            align-content: center;
-          }
-          .tabla__grid--municipio {
-            width: 15%;
+          .tabla__grid--correo {
+            overflow-x: auto;
+            width: 15rem;
             align-content: center;
           }
           .tabla__grid--estatus {
-            width: 10%;
+            width: 10rem;
             align-content: center;
           }
-          .tabla__grid--ubicacion {
-            width: 10%;
+          .tabla__grid--editar {
+            width: 8rem;
             align-content: center;
             img {
               cursor: pointer;
@@ -193,7 +187,7 @@ main {
             }
           }
           .tabla__grid--ver {
-            width: 5%;
+            width: 8rem;
             align-content: center;
             img {
               cursor: pointer;
@@ -201,7 +195,7 @@ main {
             }
           }
           .tabla__grid--habilitar {
-            width: 10%;
+            width: 8rem;
             align-content: center;
             img {
               cursor: pointer;
@@ -209,7 +203,7 @@ main {
             }
           }
           .tabla__grid--borrar {
-            width: 10%;
+            width: 8rem;
             align-content: center;
             img {
               cursor: pointer;
