--- a/src/views/consulta.html
+++ b/src/views/consulta.html
@@ -137,10 +137,15 @@
           </section>
         </section>
       </section>
+
+      <section class="grafico">
+        <canvas id="bar"></canvas>
+      </section>
     </main>
     <footer></footer>
   </body>
-
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="../js/consulta.js"></script>
   <script src="../js/mapa_georeferenciado.js"></script>
+  <script src="../js/consulta_grafico.js"></script>
 </html>
