--- a/src/css/consulta_mobile.css
+++ b/src/css/consulta_mobile.css
@@ -8,7 +8,7 @@ main {
   .modal__inicio {
     position: fixed;
     z-index: 1;
-    /* left: 50%; */
+    left: 50%;
     width: 100%;
     padding: 2rem;
     background-color: var(--color-blanco);
@@ -273,5 +273,12 @@ main {
         }
       }
     }
+  }
+
+  .grafico{
+    width: 80vw;
+    height: 35rem;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
