--- a/src/views/consulta.html
+++ b/src/views/consulta.html
@@ -51,21 +51,24 @@
       <i></i>
     </header>
     <main>
-      <section id="modal__inicio" class="modal__inicio">
-        <p class="modal__inicio--titulo">¡Bienvenidos!</p>
-        <p class="modal__inicio--texto">
-          Los desafíos del cambio climático son complejos, incluida la reducción
-          de gases de efecto invernadero, meta a la que México se compromete.
-          Una medida implementada es aumentar el uso de transporte eléctrico
-          para reducir emisiones. Esta transición presenta desafíos en
-          infraestructura y normativas públicas. Según el Acuerdo Núm.
-          A/XXX/2024, la CRE introduce ElectroCRE para informar sobre la
-          infraestructura de carga de vehículos eléctricos e híbridos
-          enchufables, así como los requisitos para integrarla al Sistema
-          Eléctrico Nacional.
-          <button id="buttonModal" class="modal__inicio--boton">Aceptar</button>
-        </p>
+      <section class="modal" id="modal">
+        <section id="modal__inicio" class="modal__inicio">
+          <p class="modal__inicio--titulo">Bienvenidos</p>
+          <p class="modal__inicio--texto">
+            Los desafíos del cambio climático son complejos, incluida la reducción
+            de gases de efecto invernadero, meta a la que México se compromete.
+            Una medida implementada es aumentar el uso de transporte eléctrico
+            para reducir emisiones. Esta transición presenta desafíos en
+            infraestructura y normativas públicas. Según el Acuerdo Núm.
+            A/XXX/2024, la CRE introduce ElectroCRE para informar sobre la
+            infraestructura de carga de vehículos eléctricos e híbridos
+            enchufables, así como los requisitos para integrarla al Sistema
+            Eléctrico Nacional.
+            <button id="buttonModal" class="modal__inicio--boton">Aceptar</button>
+          </p>
+        </section>
       </section>
+
       <section class="mapa">
         <section class="mapa__informacion">
           <p class="mapa__informacion--titulo">
