--- a/src/views/consulta.html
+++ b/src/views/consulta.html
@@ -64,8 +64,10 @@
             infraestructura de carga de vehículos eléctricos e híbridos
             enchufables, así como los requisitos para integrarla al Sistema
             Eléctrico Nacional.
-            <button id="buttonModal" class="modal__inicio--boton">Aceptar</button>
           </p>
+          <section class="modal__inicio--boton">
+            <button id="buttonModal" >Aceptar</button>
+          </section>
         </section>
       </section>
 
