--- a/src/views/actualizar_infraestructura.html
+++ b/src/views/actualizar_infraestructura.html
@@ -345,7 +345,7 @@
         <section class="contenedorBorde" id="datosInfraestructura">
           <section class="contenedorWidth" id="contenedorCargadores">
             <section id="1">
-              <p class="formulario__separadores">Modelo #1</p>
+              <p class="formulario__separadores">CIVE #1</p>
               <span></span>
               <section class="formulario__dosColumnas">
                 <!-- <section class="formulario__dosColumnas--inputText">
@@ -472,7 +472,7 @@
           </section>
           <section class="formulario__botonNuevoCargador">
             <button type="button" id="nuevoCargador">
-              Agregar Nuevo Cargador
+              Agregar Nuevo CIVE
             </button>
           </section>
         </section>
