--- a/src/views/consulta.html
+++ b/src/views/consulta.html
@@ -110,7 +110,7 @@
                 alt=""
                 srcset=""
               />
-              <a href="" id="vaciadoURL" target="_blank">Ver en Maps</a>
+              <a href="" id="vaciadoURL" target="_blank">Abrir en Google Maps</a>
             </section>
 
             <section class="informacion__estacion">
