--- a/src/css/consulta_desktop.css
+++ b/src/css/consulta_desktop.css
@@ -110,8 +110,8 @@ main {
 
   .mapa__layout {
     display: flex;
-    width: 70vw;
-    max-width: 120rem;
+    width: 100vw;
+    /* max-width: 120rem; */
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
@@ -122,7 +122,7 @@ main {
       width: 100%;
 
       #map {
-        height: 40rem;
+        height: 70rem;
 
         .map__nombre{
           font-family: var(--font-montserrat);
@@ -136,7 +136,7 @@ main {
 
     .mapa__layout--informacion {
       display: none;
-      height: 40rem;
+      height: 70rem;
       border: 0.3rem solid var(--color-guinda);
       border-radius: 2rem;
       border-top-left-radius: 0;
@@ -157,7 +157,7 @@ main {
         }
 
         img {
-          width: 3.5rem;
+          width: 2rem;
           margin-left: 2rem;
         }
       }
